--- a/Pelatihan2/index.html
+++ b/Pelatihan2/index.html
@@ -10,6 +10,8 @@
     <!-- GAMBAR -->
     <div>
         <img src="img/gambar.gif" alt="google">
+        <blink>aaaaaaaaaaaaaaaa</blink>
+        
     </div>
 
     <!-- TEKS -->
