--- a/Pelatihan 1/HTML dasar/index.html
+++ b/Pelatihan 1/HTML dasar/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pelatihan HTML</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -11,8 +12,8 @@
 	<!-- HTML ada TAG yang terbuka dan tertutup, ada juga TAG yang nggak ada penutupnya -->
 	<!-- ada penutup -->
 	<a href=""></a>
-	<img src="" alt="">
 	<!-- nggak ada penutupnya -->
+	<img src="" alt="">
 	<br>
 	<hr>
 
@@ -98,6 +99,40 @@
 	<div id="header"></div>
 	<!-- baru -->
 	<header></header>
+
+	<!-- Div -->
+	<div>
+		<h1>Lorem ipsum.</h1>
+		<p>Lorem ipsum dolor sit amet.</p>
+	</div>
+	div
+
+	<!-- class -->
+	<div class="div1">
+		<h1 class="title">Lorem ipsum.</h1>
+		<p class="paragraf">Lorem ipsum dolor sit amet.</p>
+	</div>
+	<div class="div2">
+		<h1 class="title">Lorem ipsum.</h1>
+		h1.tile
+		<p class="paragraf">Lorem ipsum dolor sit amet.</p>
+		p.paragraF
+	</div>
+	
+	<!-- ID -->
+	<div id="id1">
+		<h1>Title</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur fugit beatae totam ut cumque nulla voluptate alias facilis. Corporis!</p>
+	</div>
+
+	<!-- Nesting -->
+	<div id="id2">
+		<div class="div1">
+			<h1 class="title"></h1>
+		</div>
+	</div>
+
+	#id3>.div1>h1.title
 	
 </body>
 </html>
